# Puissance-4

./: CMakeLists.txt  Makefile  check.c  display.c  play.c  readme  readme.md  thegame.c
include/: check.h  check.h~  cmnLine.h~  cmndLine.h  cmndLine.h~  display.h  display.h~  game.h  game.h~  play.h  play.h~  power4.h  power4.h~  puissance4.h
src/: check.c  cmndLine.c  cmndLine.c~  display.c  game.c  main.c  play.c  test
